# rust_rest

./: .env  Cargo.toml  README.md
configs/: compose.yaml
configs/postgres/: service.env
docs/: tutor-db.md  tutor-nodb.md
scripts/sql/: database.sql
tutor-db/: Cargo.toml  database.sql
tutor-db/src/iter3/: db_access.rs  handlers.rs  models.rs  routes.rs
tutor-db/src/iter4/: db_access.rs  errors.rs  handlers.rs  state.rs
tutor-db/src/iter5/: errors.rs  routes.rs
tutor-db/src/iter5/db/: course.rs  tutor.rs
tutor-db/src/iter5/handlers/: course.rs  general.rs  tutor.rs
tutor-db/src/iter5/models/: course.rs  tutor.rs
tutor-nodb/: Cargo.toml
tutor-nodb/src/: handlers.rs  models.rs  routes.rs  state.rs
